--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Bycicl Parts Tracker</string>
+    <string name="app_name">Bicycle Parts Tracker</string>
     <string name="login_prompt">Already have an account? <a href="#">Login here</a>!</string>
 </resources>
